[package]
name = "gh-committer"
version = "0.1.0"
authors = ["stevemolitor <steve.molitor@zapier.com>"]
edition = "2018"
decsription = "Programmatically commit to YAML and JSON config files in a GH repo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1.0.24"
